Fix overlapping images

--- a/misc/hot-singles/index.css
+++ b/misc/hot-singles/index.css
@@ -25,18 +25,18 @@ h1, h2, h3, span {
   position: absolute;
   top: 0;
   left: 0;
-  transform: translateX(720px);
-  animation: slideshow 5s linear infinite;
+  transform: translateX(1120px);
+  animation: slideshow 12s linear infinite;
   border: 4px solid white;
   height: 240px;
 }
 
 @keyframes slideshow {
   0% {
-    transform: translateX(720px);
+    transform: translateX(1120px);
   }
   100% {
-    transform: translateX(-720px);
+    transform: translateX(-1120px);
   }
 }
 
